--- a/ERPWeb/Views/AgroConfiguration/_GetRawMaterial.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetRawMaterial.cshtml
@@ -12,7 +12,7 @@
                 <th>Organization name</th>
                 <th>Depot Name</th>
                 <th>Raw Material</th>
-                <th>Expire Date</th>
+                @*<th>Expire Date</th>*@
                 <th class="hide">organizationId</th>
                 <th>Action</th>
             </tr>
@@ -32,7 +32,7 @@
                 <td>@raw.OrganizationName</td>
                 <td>@raw.DepotName</td>
                 <td>@raw.RawMaterialName</td>
-                <td>@raw.ExpireDate.Value.ToShortDateString()</td>
+                @*<td>@raw.ExpireDate.Value.ToShortDateString()</td>*@
                 <td class="hide">@raw.OrganizationId</td>
                 <td>
                     <a href="#" class="btn btn-warning btn-sm data-edit-item-rawMaterialId" data-edit-item-rawMaterialId="@raw.RawMaterialId"><i class="fa fa-pen"></i>Edit</a>
