--- a/ERPWeb/Views/AgroConfiguration/CreateRawMaterialIssueStock.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateRawMaterialIssueStock.cshtml
@@ -316,7 +316,7 @@
                     debugger;
                     $('.toastrDefaultSuccess').trigger('click');
                      setTimeout(function () {
-                                    redirectPage('@Url.Action("GetRawMaterialStock")');
+                                    redirectPage('@Url.Action("")');
                                 }, 1000);
                 }
                 else {
