--- a/ERPWeb/Views/AgroConfiguration/_GetRawMaterialStockDetail.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetRawMaterialStockDetail.cshtml
@@ -9,14 +9,16 @@
 <table class="table table-bordered table-striped table-sm table-responsive-lg text-sm">
     @if (info != null)
     {
-        <tr>
-            <td style="width:13%">Raw Material Name</td>
-            <td style="width:15%"><b>@info.RawMaterialName</b></td>
-            <td style="width:18%">Quantity</td>
-            <td style="width:20%"><b>@info.Quantity</b></td>
-            <td style="width:13%">Unit</td>
-            <td style="width:20%"><b>@info.Unit</b></td>
-        </tr>
+    <tr>
+        <td style="width:13%">Raw Material Name</td>
+        <td style="width:15%"><b>@info.RawMaterialName</b></td>
+        <td style="width:18%">Quantity</td>
+        <td style="width:20%"><b>@info.Quantity</b></td>
+        <td style="width:13%">Unit</td>
+        <td style="width:20%"><b>@info.Unit</b></td>
+        
+
+    </tr>
     }
 </table>
 <table class="table table-bordered table-striped table-sm table-responsive-lg text-sm" id="tblReturnItems">
@@ -26,19 +28,22 @@
             <th>RawMaterial Name</th>
             <th>Quantity</th>
             <th>Unit</th>
+            <th>Status</th>
+
         </tr>
     </thead>
     <tbody>
         @foreach (var item in Model)
         {
             sl = sl + 1;
-            <tr>
-                <td class="text-center">@sl</td>
-                <td class="text-center">@item.RawMaterialName</td>
-                <td class="text-center text-bold">@item.Quantity</td>
-                <td class="text-center">@item.Unit</td>
+        <tr>
+            <td class="text-center">@sl</td>
+            <td class="text-center">@item.RawMaterialName</td>
+            <td class="text-center text-bold">@item.Quantity</td>
+            <td class="text-center">@item.Unit</td>
+            <td class="text-center">@item.Status</td>
 
-            </tr>
+        </tr>
         }
     </tbody>
 </table>
